Made header 100% to prevent overflow

--- a/header/styles.css
+++ b/header/styles.css
@@ -58,6 +58,7 @@
 body {
   --global-header-height: 61px;
   background: var(--core-heat-black);
+  width: 100%;
 }
 
 @media (max-width: 1012px) {
